<package>

  <name>zvision_lidar</name>
  <version>1.0.0</version>
  <description>
    Basic ROS support for the ZVISION 3D LIDARs.
  </description>
  <maintainer email="pengfei.cui@zvision.xyz">Pengfei Cui</maintainer>
  <author> Pengfei Cui </author>
  <author> Tony Zhang </author>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>zvision_lidar_driver</run_depend>
  <run_depend>zvision_lidar_msgs</run_depend>
  <run_depend>zvision_lidar_pointcloud</run_depend>

  <export>
    <metapackage/>
  </export>

</package>
