<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>zvision_lidar</name>
  <version>2.1.0</version>
  <description>
    Basic ROS support for the ZVISION MEMS 3D LIDARs.
  </description>
  <maintainer email="senke.chen@zvision.xyz">Senke CHEN</maintainer>
  <author>Senke CHEN</author>
  <author>Pengfei Cui</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>zvision_lidar_driver</exec_depend>
  <exec_depend>zvision_lidar_msgs</exec_depend>
  <exec_depend>zvision_lidar_pointcloud</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>




