<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zvision_lidar_driver</name>
  <version>2.1.0</version>
  <description>
    ROS device driver for ZVISION MEMS 3D LIDARs.
  </description>
  <maintainer email="pengfei.cui@zvision.xyz">Pengfei Cui</maintainer>
  <author>Pengfei Cui</author>
  <author>Tony Zhang</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>

  <depend>diagnostic_msgs</depend>
  <depend>diagnostic_updater</depend>
  <depend>libpcap</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>tf2_ros</depend>
  <depend>zvision_lidar_msgs</depend>
  <depend>angles</depend>
  <depend>pcl_conversions</depend>
  <depend>sensor_msgs</depend>
  <depend>zvision_lidar_input</depend>
  <depend>pcl_ros</depend>



<test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


