<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>zvision_lidar_pointcloud</name>
  <version>2.1.0</version>
  <description>
    Point cloud conversions for ZVISION MEMS 3D LIDARs.
  </description>
  <maintainer email="pengfei.cui@zvision.xyz">Pengfei Cui</maintainer>
  <author>Pengfei</author>
  <author>Tony Zhang</author>
  <author>George Wang</author>
  <author>Piyush Khandelwal</author>
  <author>Jesse Vera</author>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>angles</depend>
  <depend>diagnostic_updater</depend>
  <depend>geometry_msgs</depend>
  <depend>libpcl-all-dev</depend>
  <depend>message_filters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>zvision_lidar_msgs</depend>
  <depend>zvision_lidar_driver</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>




