<package format="3">

  <name>zvlidar_msgs</name>
  <version>1.0.0</version>
  <description>
    ROS message definitions for zvision_lidar 3D LIDARs.
  </description>
  <maintainer email="pengfei.cui@zvision.xyz">Pengfei Cui</maintainer>
  <author>Pengfei Cui</author>
  <author>Tony Zhang</author>
  <license>BSD</license>

<!-- ros2 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rosidl_default_generators</build_depend>

  <depend>builtin_interfaces</depend>
  <depend>std_msgs</depend>

  <exec_depend>rosidl_default_runtime</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>